Changed px units to rem

--- a/style.css
+++ b/style.css
@@ -67,15 +67,15 @@ p {
 
 .title--lg {
   font-family: Avalon, sans-serif;
-  font-size: 28px;
+  font-size: 1.75rem;
   font-weight: 700;
-  line-height: 32px;
+  line-height: 2rem;
 }
 .title--xl {
   font-family: Avalon, sans-serif;
-  font-size: 56px;
+  font-size: 3.5rem;
   font-weight: 700;
-  line-height: 56px;
+  line-height: 3.5rem;
 }
 
 /**
@@ -89,7 +89,7 @@ p {
 .section-title__link {
   color: var(--red);
   text-decoration: none;
-  padding-right: 5px;
+  padding-right: 0.3125rem;
 }
 .section-title__link:hover {
   cursor: pointer;
@@ -150,7 +150,7 @@ p {
 }
 .footer__legal {
   color: #aaa;
-  background-color: #000;
+  background-color: var(--black);
 }
 .footer__links {
   background-color: #131313;
@@ -166,15 +166,15 @@ p {
   list-style-type: none;
 }
 .footer__social-links li {
-  margin: 0 4px;
+  margin: 0 0.25rem;
 }
 .footer__word-links li {
   display: inline-block;
   font-family: Shentox, sans-serif;
-  font-size: 13px;
+  font-size: 0.8125rem;
   font-weight: 500;
-  line-height: 24px;
-  margin: 0 4px;
+  line-height: 1.5rem;
+  margin: 0 0.25rem;
   text-transform: uppercase;
 }
 .footer__social-links a,
@@ -189,6 +189,6 @@ p {
 }
 @media (min-width: 768px) {
   .footer__social-links li {
-    margin: 0 8px;
+    margin: 0 0.5rem;
   }
 }
