--- a/style.css
+++ b/style.css
@@ -149,8 +149,8 @@ p {
 .footer {
 }
 .footer__legal {
-  color: #aaa;
   background-color: var(--black);
+  color: #aaa;
 }
 .footer__links {
   background-color: #131313;
@@ -161,9 +161,9 @@ p {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 0;
-  margin: 0;
   list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 .footer__social-links li {
   margin: 0 0.25rem;
@@ -184,6 +184,25 @@ p {
 }
 .footer__social-links {
   margin-bottom: 1.5rem;
+}
+.footer__social-links a {
+  border: 2px solid transparent;
+  background-color: #333;
+  border-radius: 50%;
+  height: 38px;
+  position: relative;
+  width: 38px;
+}
+.footer__social-links a:hover {
+  background-color: transparent;
+  border: 2px solid #333;
+}
+.footer__social-links a img {
+  left: 50%;
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .footer__word-links {
 }
